package org.example.model


data class Direccion(
    val calle: String,
    val numero: String,
    val puerta: String,
    val codigoPostal: String,
    val ciudad: String
)
